--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,10 +18,10 @@
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:layout_centerInParent="true"
-            android:src="@drawable/ic_launcher_background"
+            android:src="@drawable/Eu"
             tools:layout_editor_absoluteX="105dp"
             tools:layout_editor_absoluteY="52dp" />
-
+    
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
