--- a/app/src/main/res/drawable/gradient.xml
+++ b/app/src/main/res/drawable/gradient.xml
@@ -4,7 +4,7 @@
         android:shape="rectangle" >
         <gradient
             android:startColor="#333c6c"
-            android:centerColor="#455294"
+            android:centerColor="#333c6c"
             android:endColor="#8996af"
             android:angle="270"/>
     </shape>
