--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,17 +11,19 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="250dp"
-        android:background="#00ffffff"
+        android:background="@color/GrayBlue"
         android:orientation="vertical">
 
-        <ImageView
-            android:layout_width="150dp"
-            android:layout_height="150dp"
+        <de.hdodenhof.circleimageview.CircleImageView
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/profile_image"
             android:layout_centerInParent="true"
-            android:src="@drawable/Eu"
-            tools:layout_editor_absoluteX="105dp"
-            tools:layout_editor_absoluteY="52dp" />
-    
+            android:layout_width="180dp"
+            android:layout_height="180dp"
+            android:src="@drawable/image_perfil"
+            app:civ_border_width="2dp"
+            app:civ_border_color="#FF000000"/>
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -36,72 +38,76 @@
         android:layout_width="344dp"
         android:layout_height="245dp"
         android:orientation="vertical"
+        tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="258dp"
-        tools:ignore="MissingConstraints">
+        tools:layout_editor_absoluteY="309dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
             <ImageView
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:src="@drawable/ic_email_black_48dp"/>
+                android:src="@drawable/ic_email_black_48dp" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:textSize="17dp"
-                android:text="  joaolucaspachecoab@gmail.com"/>
+                android:text="  joaolucaspachecoab@gmail.com"
+                android:textSize="17dp" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
             <ImageView
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:src="@drawable/ic_school_black_48dp"/>
+                android:src="@drawable/ic_school_black_48dp" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:textSize="17dp"
-                android:text="  Estudante de Engenharia de Software"/>
+                android:text="  Estudante de Engenharia de Software"
+                android:textSize="17dp" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
             <ImageView
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:src="@drawable/ic_phone_android_black_48dp"/>
+                android:src="@drawable/ic_phone_android_black_48dp" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:textSize="17dp"
-                android:text="  (62)5555-4321"/>
+                android:text="  (62)5555-4321"
+                android:textSize="17dp" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
             <ImageView
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:src="@drawable/ic_account_box_black_48dp"/>
+                android:src="@drawable/ic_account_box_black_48dp" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:textSize="17dp"
-                android:text="  github.com/jlucas5"/>
+                android:text="  github.com/jlucas5"
+                android:textSize="17dp" />
         </LinearLayout>
 
     </LinearLayout>
